@@ -1,3 +1,6 @@
+* Add window manager for:
+    - replace current window
+    - prevent simmilar window
 * Merge and review toolbars in form and board
 * Drop support of Python 2.5
 * Use the same design for Many2Many than One2Many
